--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ DB_NAME=rugby_bot
 DB_PORT=27017
 DB_HOST=localhost
 
-TOKEN=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+TOKEN=NzUyMjM2MTA3ODE0NjY2MzAw.X1Usdw.gij24ZSMKvQ-Ezk3x1UR4RBHiN4
 
 CL_SUCCESS=2ecc71
 CL_DANGER=e74c3c
